--- a/Lessons/lessonsIndex.html
+++ b/Lessons/lessonsIndex.html
@@ -10,11 +10,11 @@
     <title>Computing Module Title</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="webFiles/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/main.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="webFiles/css/main.css" rel="stylesheet">
+    <link href="webFiles/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,19 +34,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse" >
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="about.html">About</a>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Useful Links <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="full-width.html">Full Width Page</a>
+                            <li><a href="http://twitter.com">Twitter</a>
                             </li>
-                            <li><a href="sidebar.html">Sidebar Page</a>
+                            <li><a href="http://delicious.com">Delicious</a>
                             </li>
-                            <li><a href="faq.html">FAQ</a>
+                            <li><a href="http://codecademy.com">Codecademy</a>
                             </li>
-                            <li><a href="404.html">404</a>
-                            </li>
-                            <li><a href="pricing.html">Pricing Table</a>
+                            <li><a href="http://github.com">Github</a>
                             </li>
                         </ul>
                     </li>
@@ -83,8 +80,8 @@
                 <h4>Lesson 1</h4>
                 <p>Lesson content introduction</p>
                 <div class="btn-group">
-                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
-                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson1/lesson1.html">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson1/lesson1.md">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
             	</div>
             </div>
 
@@ -105,8 +102,8 @@
                 <h4>Lesson 2</h4>
                 <p>Lesson content introduction</p>
                 <div class="btn-group">
-                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
-                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson2/lesson2.html">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson2/lesson2.md">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
             	</div>
             </div>
 
@@ -127,8 +124,8 @@
                 <h4>Lesson 3</h4>
                 <p>Lesson content introduction</p>
                 <div class="btn-group">
-                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
-                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson3/lesson3.html">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson3/lesson3.md">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
             	</div>
             </div>
 
@@ -149,8 +146,8 @@
                 <h4>Lesson 4</h4>
                 <p>Lesson content introduction</p>
                 <div class="btn-group">
-                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
-                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson4/lesson4.html">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson4/lesson4.md">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
             	</div>
             </div>
 
@@ -171,8 +168,8 @@
                 <h4>Lesson 5</h4>
                 <p>Lesson content introduction</p>
                 <div class="btn-group">
-                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
-                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson4/lesson5.html">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="lesson4/lesson5.md">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
             	</div>
             </div>
 
@@ -197,9 +194,9 @@
     <!-- /.container -->
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/modern-business.js"></script>
+    <script src="webFiles/js/jquery-1.10.2.js"></script>
+    <script src="webFiles/js/bootstrap.js"></script>
+    <script src="webFiles/js/modern-business.js"></script>
 
 </body>
 
