--- a/Lessons/lesson3/lesson3.html
+++ b/Lessons/lesson3/lesson3.html
@@ -48,6 +48,7 @@
 					<p>
 						<small>Created by <a href="#">Author Name</a></small>
 					</p>
+					<p><small><a href="../lessonsIndex.html">Go back to lesson list</a></small></p>
 				</section>
 
 				<section>
